--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>Ultimate LMS: EXAM Edition (Fixed MathJax)</title>
+<title>Ultimate LMS: Exam Mode</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
@@ -18,7 +18,12 @@
 <script>
   window.MathJax = {
     tex: { inlineMath: [['$', '$'], ['\\(', '\\)']] },
-    menuOptions: { settings: { renderer: 'CommonHTML' } },
+    // Принудительно установлен CHTML, игнорируя меню пользователя
+    menuOptions: {
+      settings: {
+        renderer: 'CommonHTML'
+      }
+    },
     startup: { typeset: false }
   };
 </script>
